Shang New Live/src/objects/Water_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>End_Unit__c</fullName>
        <label>End Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease Unit</label>
        <referenceTo>Lease_Unit__c</referenceTo>
        <relationshipLabel>Water Transactions</relationshipLabel>
        <relationshipName>Water_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manual__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox should be checked when User enters Water Transaction data manually from Rent Schedule record.</inlineHelpText>
        <label>Manual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meter_No__c</fullName>
        <label>Meter No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Short_Code__c</fullName>
        <label>Property Short Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Water Transactions</relationshipLabel>
        <relationshipName>Water_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rent_Schedule__c</fullName>
        <label>Rent Schedule</label>
        <referenceTo>Rent_Schedules__c</referenceTo>
        <relationshipLabel>Water Transactions</relationshipLabel>
        <relationshipName>Water_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Unit__c</fullName>
        <label>Start Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Unit__c</fullName>
        <formula>End_Unit__c -  Start_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit</label>
        <referenceTo>Units__c</referenceTo>
        <relationshipLabel>Water Transactions</relationshipLabel>
        <relationshipName>Water_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Water Transaction</label>
    <nameField>
        <displayFormat>{yyyy}-{MM}-WT-{00000000}</displayFormat>
        <label>Water Transaction No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Water Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>